--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>traking</title>
+    <title>Senco Pedidos Proyect Ricardo Barragan</title>
 <script src="main.js"></script> 
     
     <link rel="stylesheet" href="estilos.css">
