--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 
-   <div id="contenedor3" class="grid grid-cols-2 grid-rows-6 bg-gray-200 rounded-t-xl shadow-2xl p-4 h-56 mt-8 ">
+   <div id="contenedor3" class="grid  grid-cols-2 grid-rows-6 bg-gray-200 rounded-t-xl shadow-2xl p-4 h-56 mt-8 md:mx-48 ">
 
            <h1 id="titulo" class=" col-start-1 col-end-3 text-xl mb-4">Historial</h1>
 
