--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    
    </div>
  
-   <div id="contenedor2" class="flex bg-gray-900 w-screen md:w-2/3  rounded-full  h-10  ">
+   <div id="contenedor2" class="flex bg-gray-200 shadow-inner w-screen md:w-2/3  rounded-full  h-10  ">
 
            
               
