--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html  lang="es">
+<html  lang="es" class="dark">
 <head>
   <meta name="theme-color" content="#4285f9">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> 
+  <script src="tailwind.config.js"></script>
   <script src="main.js"></script>
   <link rel="stylesheet" href="estilos.css">
   <!-- ... -->
@@ -12,11 +13,11 @@
   <!-- ... -->
 
 
-  <div id="contenedor" class=" h-auto grid grid justify-items-center ">
+  <div id=" contenedor" class=" h-auto  grid justify-items-center ">
 
     <div class=" mx-8 mt-11 text-center  md:mt-8 text-xl ">¡Hola!👋 por favor ingresa tu No. de folio para ver tu proceso de tu pedido 💙</div>
 
-    <div id="buscador" class=" w-auto  h-56 my-5 grid justify-items-center grid-cols-3 grid-rows-2" >
+    <div id="buscador" class=" w-auto   h-56 my-5 grid justify-items-center grid-cols-3 grid-rows-2" >
       
         <input type="text" value="" id="codigoderastreo" class=" bg-gray-100 shadow-2xl text-center rounded-full h-11 w-96  my-8 col-start-2 col-end-3 row-start-1">
         <button type="submit" onclick="verificar()" id="boton" class="  duration-500 hover:bg-blue-100 hover: bg-gray-50 rounded-3xl w-56  h-14 shadow-xl col-start-2 col-end-3 row-start-2">Rastrear</button>
