--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="tailwind.config.js"></script>
   <script src="main.js"></script>
   <link rel="stylesheet" href="estilos.css">
+  <link rel="shortcut icon" href="sencologoapp.png">
   <!-- ... -->
 </head>
 <body>
@@ -14,6 +15,7 @@
 
 
   <div id=" contenedor" class=" h-auto  grid justify-items-center ">
+    <img src="sencologoapp.png" alt="" class=" h-12 m-5">
 
     <div class=" mx-8 mt-11 text-center  md:mt-8 text-xl ">¡Hola!👋 por favor ingresa tu No. de folio para ver tu proceso de tu pedido 💙</div>
 
@@ -58,6 +60,8 @@
             <p id="entrega">Entrega</p> 
             <p id="entregafecha"></p>
    </div>
+
+
 
 
   
