--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="main.js"></script>
   <link rel="stylesheet" href="estilos.css">
   <link rel="shortcut icon" href="sencologoapp.png">
+  <title>Rastrea tu pedido | Senco</title>
   <!-- ... -->
 </head>
 <body>
