--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <div id=" contenedor" class=" h-auto  grid justify-items-center ">
     <img src="sencologoapp.png" alt="" class=" h-12 m-5">
 
-    <div class=" mx-8 mt-11 text-center  md:mt-8 text-xl ">¡Hola!👋 por favor ingresa tu No. de folio para ver tu proceso de tu pedido 💙</div>
+    <div class=" mx-8 mt-11 text-center  md:mt-8 text-xl ">¡Hola!👋 por favor ingresa tu No. de folio para ver tu proceso de tu pedido </div>
 
     <div id="buscador" class=" w-auto   h-56 my-5 grid justify-items-center grid-cols-3 grid-rows-2" >
       
-        <input type="text" value="" id="codigoderastreo" class=" bg-gray-100 shadow-2xl text-center rounded-full h-11 w-96  my-8 col-start-2 col-end-3 row-start-1">
+        <input type="text" value="" id="codigoderastreo" class=" uppercase bg-gray-100 shadow-2xl text-center rounded-full h-11 w-96  my-8 col-start-2 col-end-3 row-start-1">
         <button type="submit" onclick="verificar()" id="boton" class="  duration-500 hover:bg-blue-100 hover: bg-gray-50 rounded-3xl w-56  h-14 shadow-xl col-start-2 col-end-3 row-start-2">Rastrear</button>
     </div>
 
